# EMST

./: CMakeLists.txt  README.md  edge.cpp  edge.h  functions.cpp  functions.h  main.cpp  point.cpp  point.h  tests.cpp  tests.h  triangle.cpp  triangle.h
